--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Cache
         uses: actions/cache@v4
         with:
+          key: ${{ runner.os }}-${{ hashFiles('./MikuMikuWorld.sln') }}
           path: |
             x64/Debug
       - name: Build
