--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -15,10 +15,6 @@ jobs:
           submodules: true
       - name: Add msbuild to PATH
         uses: microsoft/setup-msbuild@v1
-      - name: Setup ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 3.3
       - name: Cache
         uses: actions/cache@v4
         with:
@@ -28,7 +24,17 @@ jobs:
       - name: Build
         run: |
           msbuild /p:Configuration=Debug /p:Platform=x64
-
+  check:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: true
+      - name: Setup ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.3
       - name: Check
         id: check
         run: |
