--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -52,39 +52,39 @@ jobs:
         with:
           NAME: coverage-ja
           LABEL: 'Japanese'
-          STATUS: ${{ steps.check.output.coverage_ja }}%
-          COLOR: ${{ steps.check.output.coverage_ja == '100' && 'success' || 'important' }}
+          STATUS: ${{ steps.check.outputs.coverage_ja }}%
+          COLOR: ${{ steps.check.outputs.coverage_ja == '100' && 'success' || 'important' }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: "Translation Coverage: es"
         uses: RubbaBoy/BYOB@v1.3.0
         with:
           NAME: coverage-es
           LABEL: 'Spanish'
-          STATUS: ${{ steps.check.output.coverage_es }}%
-          COLOR: ${{ steps.check.output.coverage_es == '100' && 'success' || 'important' }}
+          STATUS: ${{ steps.check.outputs.coverage_es }}%
+          COLOR: ${{ steps.check.outputs.coverage_es == '100' && 'success' || 'important' }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: "Translation Coverage: kr"
         uses: RubbaBoy/BYOB@v1.3.0
         with:
           NAME: coverage-kr
           LABEL: 'Korean'
-          STATUS: ${{ steps.check.output.coverage_kr }}%
-          COLOR: ${{ steps.check.output.coverage_kr == '100' && 'success' || 'important' }}
+          STATUS: ${{ steps.check.outputs.coverage_kr }}%
+          COLOR: ${{ steps.check.outputs.coverage_kr == '100' && 'success' || 'important' }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: "Translation Coverage: ru"
         uses: RubbaBoy/BYOB@v1.3.0
         with:
           NAME: coverage-ru
           LABEL: 'Russian'
-          STATUS: ${{ steps.check.output.coverage_ru }}%
-          COLOR: ${{ steps.check.output.coverage_ru == '100' && 'success' || 'important' }}
+          STATUS: ${{ steps.check.outputs.coverage_ru }}%
+          COLOR: ${{ steps.check.outputs.coverage_ru == '100' && 'success' || 'important' }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: "Translation Coverage: vi"
         uses: RubbaBoy/BYOB@v1.3.0
         with:
           NAME: coverage-vi
           LABEL: 'Vietnamese'
-          STATUS: ${{ steps.check.output.coverage_vi }}%
-          COLOR: ${{ steps.check.output.coverage_vi == '100' && 'success' || 'important' }}
+          STATUS: ${{ steps.check.outputs.coverage_vi }}%
+          COLOR: ${{ steps.check.outputs.coverage_vi == '100' && 'success' || 'important' }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
