--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -45,7 +45,7 @@ jobs:
           NAME: coverage-en
           LABEL: 'English'
           STATUS: ${{ steps.check.outputs.coverage_en }}%
-          COLOR: ${{ steps.check.outputs.coverage_en == '100.0' && 'success' || 'important' }}
+          COLOR: ${{ steps.check.outputs.coverage_en == '100.0' && 'green' || 'orange' }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: "Translation Coverage: ja"
         uses: RubbaBoy/BYOB@v1.3.0
@@ -53,7 +53,7 @@ jobs:
           NAME: coverage-ja
           LABEL: 'Japanese'
           STATUS: ${{ steps.check.outputs.coverage_ja }}%
-          COLOR: ${{ steps.check.outputs.coverage_ja == '100.0' && 'success' || 'important' }}
+          COLOR: ${{ steps.check.outputs.coverage_ja == '100.0' && 'green' || 'orange' }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: "Translation Coverage: es"
         uses: RubbaBoy/BYOB@v1.3.0
@@ -61,7 +61,7 @@ jobs:
           NAME: coverage-es
           LABEL: 'Spanish'
           STATUS: ${{ steps.check.outputs.coverage_es }}%
-          COLOR: ${{ steps.check.outputs.coverage_es == '100.0' && 'success' || 'important' }}
+          COLOR: ${{ steps.check.outputs.coverage_es == '100.0' && 'green' || 'orange' }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: "Translation Coverage: kr"
         uses: RubbaBoy/BYOB@v1.3.0
@@ -69,7 +69,7 @@ jobs:
           NAME: coverage-kr
           LABEL: 'Korean'
           STATUS: ${{ steps.check.outputs.coverage_kr }}%
-          COLOR: ${{ steps.check.outputs.coverage_kr == '100.0' && 'success' || 'important' }}
+          COLOR: ${{ steps.check.outputs.coverage_kr == '100.0' && 'green' || 'orange' }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: "Translation Coverage: ru"
         uses: RubbaBoy/BYOB@v1.3.0
@@ -77,7 +77,7 @@ jobs:
           NAME: coverage-ru
           LABEL: 'Russian'
           STATUS: ${{ steps.check.outputs.coverage_ru }}%
-          COLOR: ${{ steps.check.outputs.coverage_ru == '100.0' && 'success' || 'important' }}
+          COLOR: ${{ steps.check.outputs.coverage_ru == '100.0' && 'green' || 'orange' }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: "Translation Coverage: vi"
         uses: RubbaBoy/BYOB@v1.3.0
