--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -87,4 +87,11 @@ jobs:
           STATUS: ${{ steps.check.outputs.coverage_vi }}%
           COLOR: ${{ steps.check.outputs.coverage_vi == '100.0' && 'green' || 'orange' }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+      - name: "Translation Coverage: tr"
+        uses: RubbaBoy/BYOB@v1.3.0
+        with:
+          NAME: coverage-tr
+          LABEL: 'Turkish'
+          STATUS: ${{ steps.check.outputs.coverage_tr }}%
+          COLOR: ${{ steps.check.outputs.coverage_tr == '100.0' && 'green' || 'orange' }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
