chore: use /MT for release build

--- a/MikuMikuWorld/MikuMikuWorld.vcxproj
+++ b/MikuMikuWorld/MikuMikuWorld.vcxproj
@@ -148,6 +148,7 @@
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <ObjectFileName>$(IntDir)</ObjectFileName>
       <Optimization>MaxSpeed</Optimization>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
