--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,14 @@
-cmake_minimum_required(VERSION 3.16.0 FATAL_ERROR)
+cmake_minimum_required(VERSION 4.0.0 FATAL_ERROR)
+cmake_policy(SET CMP0167 NEW)
 
 project(MikuMikuWorld)
+
+# Main
 set(depends_files "./Depends/glad/src/glad.c"
                   "./Depends/stb_vorbis/stb_vorbis.c")
 set(source_dir "${CMAKE_CURRENT_SOURCE_DIR}/MikuMikuWorld")
 file(GLOB_RECURSE ALL_FILES "${source_dir}/*.cpp" "${source_dir}/*.h"
      "${source_dir}/*.hpp" "${source_dir}/*.c")
-
-# ##############################################################################
-# Target
-# ##############################################################################
 add_executable(${PROJECT_NAME} ${ALL_FILES} ${depends_files})
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
 target_include_directories(
@@ -27,7 +26,65 @@ target_include_directories(
 target_link_directories(
   ${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../Depends/GLFW/lib;"
   "${CMAKE_CURRENT_SOURCE_DIR}/../Depends/openssl/lib")
-set(ADDITIONAL_LIBRARY_DEPENDENCIES "glfw3;" "opengl32;" "Version;"
-                                    "libcrypto;" "libssl")
-target_link_libraries(${PROJECT_NAME}
-                      PRIVATE "${ADDITIONAL_LIBRARY_DEPENDENCIES}")
+
+if(NOT CMAKE_BUILD_TYPE STREQUAL "Release")
+  target_compile_definitions(${PROJECT_NAME} PRIVATE DEBUG)
+endif()
+
+if(MSVC)
+  target_link_libraries(${PROJECT_NAME} PRIVATE opengl32 Version libcrypto.lib
+                                                libssl.lib)
+elseif(UNIX)
+  target_link_libraries(${PROJECT_NAME} PRIVATE GL X11 pthread dl libcrypto.so
+                                                libssl.so)
+else()
+  message(FATAL_ERROR "Unsupported platform")
+endif()
+
+set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "MikuMikuWorld4CC")
+
+# Depends: NativeFileDialog extended
+add_subdirectory(Depends/nativefiledialog-extended)
+target_link_libraries(${PROJECT_NAME} PRIVATE nfd)
+
+# Depends: GLFW
+add_subdirectory(Depends/glfw)
+target_link_libraries(${PROJECT_NAME} PRIVATE glfw)
+
+# Depends: NativeMessageBox
+add_subdirectory(Depends/native_message_box)
+target_link_libraries(${PROJECT_NAME} PRIVATE nfd)
+
+# Depends: Boost
+add_subdirectory(Depends/boost)
+target_link_libraries(${PROJECT_NAME} PRIVATE Boost::locale)
+
+# Depends: whereami
+add_library(whereami STATIC
+            ${CMAKE_CURRENT_SOURCE_DIR}/Depends/whereami/src/whereami.c)
+target_include_directories(
+  whereami PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Depends/whereami/src)
+target_include_directories(
+  ${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Depends/whereami/src)
+
+# Depends: whereami-cpp
+add_library(
+  whereami-cpp STATIC
+  ${CMAKE_CURRENT_SOURCE_DIR}/Depends/whereami-cpp/source/whereami++.cpp)
+target_include_directories(
+  whereami-cpp PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Depends/whereami-cpp/include
+                      ${CMAKE_CURRENT_SOURCE_DIR}/Depends/whereami/src)
+target_link_libraries(whereami-cpp PRIVATE whereami)
+target_include_directories(
+  ${PROJECT_NAME}
+  PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Depends/whereami-cpp/include)
+target_link_libraries(${PROJECT_NAME} PRIVATE whereami-cpp)
+
+# Copy files
+add_custom_command(
+  TARGET ${PROJECT_NAME}
+  POST_BUILD
+  COMMAND
+    ${CMAKE_COMMAND} -E copy_directory
+    "${CMAKE_CURRENT_SOURCE_DIR}/MikuMikuWorld/res"
+    "${CMAKE_CURRENT_BINARY_DIR}/res")
