--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,9 @@
 [submodule "Depends/whereami-cpp"]
 	path = Depends/whereami-cpp
 	url = https://github.com/nabijaczleweli/whereami-cpp.git
+[submodule "Depends/DirectXMath"]
+	path = Depends/DirectXMath
+	url = https://github.com/microsoft/DirectXMath.git
+[submodule "Depends/imgui"]
+	path = Depends/imgui
+	url = https://github.com/ocornut/imgui.git
