--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,13 @@
 cmake_minimum_required(VERSION 4.0.0 FATAL_ERROR)
 cmake_policy(SET CMP0167 NEW)
 
+if(NOT CMAKE_BUILD_TYPE STREQUAL "Release")
+  add_compile_definitions(DEBUG)
+  if(UNIX)
+    add_compile_options(-g)
+  endif()
+endif()
+
 project(MikuMikuWorld)
 
 # Main
@@ -13,7 +20,7 @@ add_executable(${PROJECT_NAME} ${ALL_FILES} ${depends_files})
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
 target_include_directories(
   ${PROJECT_NAME}
-  PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/./Depends/DirectXMath-master/Inc;"
+  PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/./Depends/DirectXMath/Inc;"
          "${CMAKE_CURRENT_SOURCE_DIR}/./Depends/glad/include;"
          "${CMAKE_CURRENT_SOURCE_DIR}/./Depends/GLFW/include;"
          "${CMAKE_CURRENT_SOURCE_DIR}/./Depends/stb_image;"
@@ -27,11 +34,11 @@ target_link_directories(
   ${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../Depends/GLFW/lib;"
   "${CMAKE_CURRENT_SOURCE_DIR}/../Depends/openssl/lib")
 
-if(NOT CMAKE_BUILD_TYPE STREQUAL "Release")
-  target_compile_definitions(${PROJECT_NAME} PRIVATE DEBUG)
-endif()
+target_compile_definitions(${PROJECT_NAME} PRIVATE IMGUI_DEFINE_MATH_OPERATORS)
 
-if(MSVC)
+if(EMSCRIPTEN)
+
+elseif(MSVC)
   target_link_libraries(${PROJECT_NAME} PRIVATE opengl32 Version libcrypto.lib
                                                 libssl.lib)
 elseif(UNIX)
@@ -43,42 +50,77 @@ endif()
 
 set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "MikuMikuWorld4CC")
 
-# Depends: NativeFileDialog extended
-add_subdirectory(Depends/nativefiledialog-extended)
-target_link_libraries(${PROJECT_NAME} PRIVATE nfd)
+if(EMSCRIPTEN)
+  target_compile_options(${PROJECT_NAME} PUBLIC "--use-port=contrib.glfw3")
+  target_link_options(${PROJECT_NAME} PUBLIC "--use-port=contrib.glfw3")
+  target_compile_definitions(${PROJECT_NAME} PUBLIC _XM_NO_INTRINSICS_)
+else()
+  # Depends: GLFW
+  add_subdirectory(Depends/glfw)
+  target_link_libraries(${PROJECT_NAME} PRIVATE glfw)
 
-# Depends: GLFW
-add_subdirectory(Depends/glfw)
-target_link_libraries(${PROJECT_NAME} PRIVATE glfw)
+  # Depends: NativeMessageBox
+  add_subdirectory(Depends/native_message_box)
+  target_link_libraries(${PROJECT_NAME} PRIVATE nfd)
 
-# Depends: NativeMessageBox
-add_subdirectory(Depends/native_message_box)
-target_link_libraries(${PROJECT_NAME} PRIVATE nfd)
+  # Depends: NativeFileDialog extended
+  add_subdirectory(Depends/nativefiledialog-extended)
+  target_link_libraries(${PROJECT_NAME} PRIVATE nfd)
+
+  # Depends: whereami
+  add_library(whereami STATIC
+              ${CMAKE_CURRENT_SOURCE_DIR}/Depends/whereami/src/whereami.c)
+  target_include_directories(
+    whereami PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Depends/whereami/src)
+  target_include_directories(
+    ${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Depends/whereami/src)
+
+  # Depends: whereami-cpp
+  add_library(
+    whereami-cpp STATIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/Depends/whereami-cpp/source/whereami++.cpp)
+  target_include_directories(
+    whereami-cpp PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Depends/whereami-cpp/include
+                        ${CMAKE_CURRENT_SOURCE_DIR}/Depends/whereami/src)
+  target_link_libraries(whereami-cpp PRIVATE whereami)
+  target_include_directories(
+    ${PROJECT_NAME}
+    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Depends/whereami-cpp/include)
+  target_link_libraries(${PROJECT_NAME} PRIVATE whereami-cpp)
+
+endif()
+
+# Depends: ImGui
+set(IMGUI_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Depends/imgui")
+file(GLOB IMGUI_FILES "${IMGUI_DIR}/*.cpp" "${IMGUI_DIR}/*.h"
+     "${IMGUI_DIR}/*.hpp")
+add_library(
+  imgui STATIC
+  ${IMGUI_FILES} ${IMGUI_DIR}/backends/imgui_impl_glfw.cpp
+  ${IMGUI_DIR}/backends/imgui_impl_opengl3.cpp
+  ${IMGUI_DIR}/misc/cpp/imgui_stdlib.cpp)
+target_include_directories(imgui PUBLIC "${IMGUI_DIR}")
+if(EMSCRIPTEN)
+  target_compile_options(imgui PUBLIC "--use-port=contrib.glfw3")
+else()
+  target_link_libraries(imgui PRIVATE glfw)
+endif()
+
+target_include_directories(${PROJECT_NAME} PUBLIC "${IMGUI_DIR}")
+target_link_libraries(${PROJECT_NAME} PRIVATE imgui)
 
 # Depends: Boost
 add_subdirectory(Depends/boost)
 target_link_libraries(${PROJECT_NAME} PRIVATE Boost::locale)
 
-# Depends: whereami
-add_library(whereami STATIC
-            ${CMAKE_CURRENT_SOURCE_DIR}/Depends/whereami/src/whereami.c)
-target_include_directories(
-  whereami PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Depends/whereami/src)
-target_include_directories(
-  ${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Depends/whereami/src)
-
-# Depends: whereami-cpp
-add_library(
-  whereami-cpp STATIC
-  ${CMAKE_CURRENT_SOURCE_DIR}/Depends/whereami-cpp/source/whereami++.cpp)
-target_include_directories(
-  whereami-cpp PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Depends/whereami-cpp/include
-                      ${CMAKE_CURRENT_SOURCE_DIR}/Depends/whereami/src)
-target_link_libraries(whereami-cpp PRIVATE whereami)
-target_include_directories(
-  ${PROJECT_NAME}
-  PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Depends/whereami-cpp/include)
-target_link_libraries(${PROJECT_NAME} PRIVATE whereami-cpp)
+if(EMSCRIPTEN)
+  target_link_options(boost_container PRIVATE -pthread)
+  target_compile_options(boost_container PRIVATE -pthread)
+  target_link_options(boost_thread PRIVATE -pthread)
+  target_compile_options(boost_thread PRIVATE -pthread)
+  target_link_options(boost_locale PRIVATE -pthread)
+  target_compile_options(boost_locale PRIVATE -pthread)
+endif()
 
 # Copy files
 add_custom_command(
