Fix copy paste error

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -100,6 +100,6 @@ jobs:
         with:
           NAME: coverage-pt
           LABEL: 'Brazillian Portuguese'
-          STATUS: ${{ steps.check.outputs.coverage_tr }}%
-          COLOR: ${{ steps.check.outputs.coverage_tr == '100.0' && 'green' || 'orange' }}
+          STATUS: ${{ steps.check.outputs.coverage_pt }}%
+          COLOR: ${{ steps.check.outputs.coverage_pt == '100.0' && 'green' || 'orange' }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
